syntax = "proto3";

import "commons.proto";

package checkIn;

option java_package = "ar.edu.itba.pod.query";
option java_multiple_files = true;

service QueryService {
    rpc getCountersState (CountersStateRequest) returns (CountersStateResponse);
    rpc getCheckInHistory (CheckInHistoryRequest) returns (CheckInHistoryResponse);
}

message CountersStateRequest{
    oneof request {
        CountersStateRequestWithSector sector = 1;
        CountersStateRequestWithOutSector noSector = 2;
    }
}

message CountersStateRequestWithSector{
    string sectorName = 1;
}

message CountersStateRequestWithOutSector{

}

message CountersStateResponse {
    repeated CounterState countersState = 1;
}

message CounterState{
    string sectorName = 1;
    int32 counterStart = 2;
    int32 counterEnd = 3;
    string airlineName = 4;
    repeated Flights flights = 5;
    int32 people = 6;
}

message Flights{
    string flightCode = 1;
}

message CheckInHistoryRequest {
    oneof request{
        CheckInHistoryRequestWithSector sector = 1;
        CheckInHistoryRequestWithAirline airline = 2;
        CheckInHistoryRequestWithOutSectorNorAirline noSectorNorAirline = 3;
        CheckInHistoryRequestWithSectorAndAirline sectorAndAirline = 4;
    }
}

message CheckInHistoryRequestWithSector {
    string sectorName = 1;
}

message CheckInHistoryRequestWithAirline {
    string airlineName = 1;
}

message CheckInHistoryRequestWithOutSectorNorAirline {

}

message CheckInHistoryRequestWithSectorAndAirline {
    string sectorName = 1;
    string airlineName = 2;
}

message CheckInHistoryResponse {
    repeated CheckInHistory checkInsHistory = 1;
}

message CheckInHistory {
    string sectorName = 1;
    int32 counterCode = 2;
    string airlineName = 3;
    string flightCode = 4;
    string bookingCode = 5;
}



